--- a/Solution/docker-compose.yml
+++ b/Solution/docker-compose.yml
@@ -29,11 +29,14 @@ services:
     build:
       context: .
       dockerfile: WebApi/Dockerfile
+      args:
+        BUILD_CONFIGURATION: Release
+        VERSION: 1.0.0
     container_name: payment-api
     ports:
       - "8080:8080"
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_ENVIRONMENT=Production
       - ConnectionStrings__Redis=redis:6379
       - DOTNET_GCHeapHardLimit=0x8000000
     depends_on:
@@ -52,8 +55,42 @@ services:
     restart: always
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
-      interval: 1s
-      timeout: 1s
+      interval: 30s
+      timeout: 3s
+      retries: 3
+      start_period: 10s
+
+  worker:
+    build:
+      context: .
+      dockerfile: WorkerService/Dockerfile
+      args:
+        BUILD_CONFIGURATION: Release
+        VERSION: 1.0.0
+    container_name: payment-worker
+    environment:
+      - DOTNET_ENVIRONMENT=Production
+      - ConnectionStrings__Redis=redis:6379
+      - DOTNET_GCHeapHardLimit=0x8000000
+    depends_on:
+      redis:
+        condition: service_healthy
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 256M
+        reservations:
+          cpus: '0.25'
+          memory: 128M
+      replicas: 1
+    networks:
+      - payment-network
+    restart: always
+    healthcheck:
+      test: ["CMD", "pgrep", "-f", "dotnet WorkerService.dll"]
+      interval: 30s
+      timeout: 3s
       retries: 3
       start_period: 10s
 
